# CDC_Data_Pipeline

./: .gitignore  README.md  main.py  mysql-connector.json  pyproject.toml  requirements.txt
configs/: settings.py
docker/: docker-compose.yml
scripts/: clickhouse_init.sql  commands.txt  init_db.sql  mysql_init.sql  setup_debezium.sh
src/: main.py
src/cdc/: debezium_connector.json
src/configs/: settings.py
src/streaming/: session.py  sink.py  spark_streaming_job.py  transformation.py
