[project]
name = "de-cdc-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.3.0",
    "py4j>=0.10.9.7",
    "pyspark==3.5.1",
    "python-dotenv>=1.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
managed = true
